<resources>
    <string name="app_name">drinkmate</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="upload_to_database">Upload to DB</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="dev_env">Developer Environment Setup Testing</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="CreateAccount">Create Account</string>
    <string name="confirmpassword">confirm password</string>
    <string name="clickToLogin">ClickToLogIn</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_friends_chat">FriendsChatActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main2">MainActivity2</string>

</resources>